hide editor on small screen sizes + multiple small fixes

--- a/src/scss/Help.scss
+++ b/src/scss/Help.scss
@@ -1,9 +1,9 @@
 .app-help {
   color: $c-editor-primary;
-  h1,h2,h3,h4,h5,h6 { font-weight: normal; }
-  h1 { font-size: 6vh; margin: 0 0 4vh 0;  }
-  h2 { font-size: 4vh; margin: 5vh 0 3vh 0; }
-  line-height: 3vh;
+  h1,h2,h3,h4,h5,h6 { font-weight: normal; font-size: 100%; }
+  h1 { font-size: 3vw; margin: 0 0 4vw 0;  }
+  h2 { font-size: 2vw; margin: 2vw 0 1vw 0; }
+  line-height: 1.5vw;
 
   a { color: $c-editor-primary; }
 
@@ -16,7 +16,7 @@
     padding: .3vw .5vw; 
     border-radius: $g-border-radius;
     color: $bg-editor-alt;
-    margin: 0 0 1vh 0;
+    margin: 0 0 1vw 0;
     font-weight: bold;
   }
 
@@ -27,10 +27,10 @@
   }
 
   .app-help-footer {
-    margin: 10vh 0;
+    margin: 3vw 0;
     .app-help-social {
-      margin: 1vh 0;
-      font-size: 5vh;
+      margin: 1vw 0;
+      font-size: 3vw;
     }
   }
   
@@ -39,6 +39,6 @@
   .app-help-button-html { background: $c-help-button-html; }
   .app-help-button-toolbar { background: $c-help-button-toolbar; }
   .app-help-container {
-    margin: 4vh;
+    margin: 4vw;
   }
 }
